# image-segmentation

./: .gitignore  Makefile  README.md  requirements.txt  setup.cfg
configs/: main.yml
notebooks/: clothes_match.ipynb  main.ipynb
scripts/: upload_configs.sh  upload_notebooks.sh  upload_whl.sh
src/: train.py
src/imseg/: make_fashionpedia_dataset.py  train.py
src/model/: data_loader.py  net.py
src/utils/: train_utils.py  transform_utils.py  utils.py  vis_utils.py
